--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#menu" class="cta-button">Pesan Sekarang</a>
         </header>
         <div class="image-container">
-            <img src="/laragon/www/oakokd/coffe1.jpeg" alt="Coffee cup with beans">
+            <img src="coffe1.jpeg" alt="Coffee cup with beans">
         </div>
         <footer>
             <div class="info">
